# telegram-welcome-bot

./: .dockerignore  .gitignore  .tool-versions  Chart.yaml  Dockerfile  Makefile  handler.py  pyproject.toml  serverless.yml  values.yaml
.github/workflows/: main.yml
chart/: values.yaml
chart/templates/: secrets.yaml  update-handler.yaml
src/app/: __main__.py  bot.py  config.py
templates/: secrets.yaml  update-handler.yaml
