[project]
name = "app"
description = "Greets alcoholics"
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
requires-python = "==3.13.*"
license-files = ["LICENSE"]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==1.1.1",
    "bs-nats-updater ==2.0.5",
    "python-telegram-bot ==22.3",
    "sentry-sdk >=2.0.0, <3.0.0",
    "uvloop ==0.21.*",
]

[dependency-groups]
dev = [
    "mypy ==1.17.*",
    "pytest >=8.0.0, <9.0.0",
    "ruff ==0.12.4",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }

[tool.uv.workspace]
exclude = ["src/tests"]

[build-system]
requires = ["uv_build==0.8.*"]
build-backend = "uv_build"

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
